[tool.poetry]
name = "concurrent-programs"
version = "0.0.1"
description = "Concurrent programming"
authors = ["Bibek Bhattacharya <bibek.bhattacharya@sensynehealth.com>"]
keywords = ["concurrency"]
repository = "https:///github.com/bibek-bhattacharya/concurrent-programs"

[[tool.poetry.source]]
name = "sensynehealth"
url = "https://pypi.fury.io/sensynehealth/"

[tool.poetry.dependencies]
python = "^3.8"
cachetools = "4.*"
environs = "9.*"
Faker = "8.*"
fastapi = "0.*"
httpx = "0.*"
PyYAML = "5.*"
she-logging = "1.*"
uvicorn = "0.*"
ddtrace = "^0.48.1"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "20.8b1"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = "*"
pytest-freezegun = "*"
pytest-mock = "*"
requests_mock = "*"
safety = "*"
tox = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
